# open-amp

./: README.md
apps/examples/: CMakeLists.txt
apps/examples/load_fw/: CMakeLists.txt  common.h  load_fw.c  lscript.ld  platform_info.c  zynqmp_apu_lcm_rproc_example.c  zynqmp_rpu_lcm_rproc_example.c
apps/examples/oob_echo/: CMakeLists.txt  rpmsg-echo.h  rpmsg-oob-echo.c  rpmsg-oob-ping.c
apps/examples/rpc_demo/: rpc_demod.c
apps/machine/microblaze_generic/: CMakeLists.txt  README.md  openamp-linux-u-MicroBlaze.dtsi  platform_info.c  platform_info.h  rsc_table.c  rsc_table.h  zynqmp_mb_a53_rproc.c
apps/machine/zynq7/: platform_info.c
apps/machine/zynqmp/: platform_info.c
apps/machine/zynqmp_r5/: platform_info.c  platform_info.h
apps/system/generic/machine/microblaze_generic/: helper.c  linker_remote.ld
apps/system/generic/machine/zynqmp_r5/: CMakeLists.txt  linker_large_text.ld  linker_remote.ld
apps/system/linux/machine/generic/: platform_info.c
lib/common/: sh_mem.c
lib/include/openamp/: hil.h  remoteproc.h  rpmsg.h
lib/remoteproc/: rsc_table_parser.c
